--- a/gdm/trunk/PKGBUILD
+++ b/gdm/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 pkgname=gdm
 pkgver=2.32.0
-pkgrel=4
+pkgrel=5
 pkgdesc="Gnome Display Manager (a reimplementation of xdm)"
 arch=('i686' 'x86_64')
 license=('GPL')
@@ -21,6 +21,7 @@ source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.32/${pkgname}-${pkgv
         gdm-vt-allocation-hack.patch
         0001-port-to-libpanel-applet-3.0.patch
         0001-Fix-version-in-login-window-when-file-is-empty.patch
+        correctly-give-focus-to-user-chooser.patch
         gdm.pam
         gdm-autologin.pam
         gdm)
@@ -29,6 +30,7 @@ sha256sums=('f47acd19ed10d6fbb37c3e2b54f5b392c7020db67f71db3f75567ead30ab2fa4'
             '3c8b588d4af08d94dc93bcd5e4c2a983c3f4fbbbe40833bceac2a1df4f1e8215'
             '41ca4b2408d61776ab42c50834374a90664d43d33ad7034c7c52862d9bf3234a'
             '9bcdb1a977e93824ef5f693610a964790befa3dd7e7662746fb8ba1212ecdefd'
+            'ab6d9739c0cc3631d077a897291d6a38fea1c713a3647d008e2635f48c503cb4'
             'f1dfa4d88288d4b0a631a68a51b46c2da537bee8fe5a99f9f288c8ff75a50b19'
             '3daff680ff6b7ea56f84f40843e46e72477c81e9e405028203c942af04d07ae5'
             '272c08d8e8b50bf424d0705ac864d4c18c47ec4f6893b1af732c2efbc86c9550')
@@ -39,6 +41,7 @@ build() {
   patch -Np1 -i "${srcdir}/gdm-vt-allocation-hack.patch"
   patch -Np1 -i "${srcdir}/0001-port-to-libpanel-applet-3.0.patch"
   patch -Np1 -i "${srcdir}/0001-Fix-version-in-login-window-when-file-is-empty.patch"
+  patch -Np1 -i "${srcdir}/correctly-give-focus-to-user-chooser.patch"
   autoreconf -fi
 
   ./configure --prefix=/usr --sysconfdir=/etc \
