upgpkg: php-apc 3.1.7-1 upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@105850 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/php-apc/trunk/PKGBUILD
+++ b/php-apc/trunk/PKGBUILD
@@ -2,24 +2,19 @@
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=php-apc
-pkgver=3.1.6
+pkgver=3.1.7
 pkgrel=1
 arch=('i686' 'x86_64')
 pkgdesc='A free, open, and robust framework for caching and optimizing PHP intermediate code'
 url='http://pecl.php.net/package/APC'
 depends=('php')
 license="PHP"
-source=("http://pecl.php.net/get/APC-${pkgver}.tgz"
-        'suppress_stat_warning.patch')
+source=("http://pecl.php.net/get/APC-${pkgver}.tgz")
 backup=('etc/php/conf.d/apc.ini')
-md5sums=('624b8030254f897face30789d64e6b7e'
-         'cf5b72c9808273e782bdc11421b4a512')
+md5sums=('94239866e5d1b90e02675e988a5cbad4')
 
 build() {
 	cd $srcdir/APC-$pkgver
-	# suppress warning when stat=0 is used with rel. paths
-	# see http://pecl.php.net/bugs/bug.php?id=19610
-	patch -p0 -i ${srcdir}/suppress_stat_warning.patch
 	phpize
 	./configure --prefix=/usr
 	make
