--- a/squeeze/trunk/PKGBUILD
+++ b/squeeze/trunk/PKGBUILD
@@ -4,13 +4,13 @@
 
 pkgname=squeeze
 pkgver=0.2.3
-pkgrel=3
+pkgrel=4
 pkgdesc="Squeeze is a modern and advanced archive manager for the Xfce Desktop Environment."
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://squeeze.xfce.org/"
 groups=('xfce4-goodies')
-depends=('thunar' 'desktop-file-utils' 'hicolor-icon-theme')
+depends=('thunar-vfs' 'desktop-file-utils' 'hicolor-icon-theme')
 makedepends=('pkgconfig' 'tar' 'desktop-file-utils')
 optdepends=('tar: TAR support'
             'gzip: GZIP support'
@@ -31,11 +31,15 @@ md5sums=('bd3cb0648b49be1f146fc4f675606176')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  ./configure --prefix=/usr --sysconfdir=/etc --libexecdir=/usr/lib/xfce4 \
-    --localstatedir=/var --disable-static || return 1
-  make || return 1
+  ./configure --prefix=/usr \
+	--sysconfdir=/etc \
+	--libexecdir=/usr/lib/xfce4 \
+	--localstatedir=/var \
+	--disable-static \
+	--disable-debug
+  make
 }
 package() {
   cd ${srcdir}/${pkgname}-${pkgver}
-  make DESTDIR=${pkgdir} install || return 1
+  make DESTDIR=${pkgdir} install
 }
