--- a/dash/trunk/PKGBUILD
+++ b/dash/trunk/PKGBUILD
@@ -3,27 +3,26 @@
 
 pkgname=dash
 pkgver=0.5.6.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A POSIX compliant shell that aims to be as small as possible"
 arch=('i686' 'x86_64')
 url="http://gondor.apana.org.au/~herbert/dash/"
 license=('BSD')
 groups=('base')
 depends=('glibc')
-#provides=('sh')
-source=("http://gondor.apana.org.au/~herbert/dash/files/dash-$pkgver.tar.gz")
+source=("http://gondor.apana.org.au/~herbert/dash/files/${pkgname}-${pkgver}.tar.gz")
 md5sums=('1c846f4f5a33c0050b2045a6f7037e56')
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --mandir=/usr/share/man --exec-prefix=""
-  make || return 1
-  make DESTDIR=$pkgdir install || return 1
+  make
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" install
 
   # license
-  install -m644 -D COPYING $pkgdir/usr/share/licenses/$pkgname/COPYING
-
-  # dash is our default /bin/sh
-  #cd $pkgdir/bin
-  #ln -s dash sh
+  install -m644 -D COPYING ${pkgdir}/usr/share/licenses/${pkgname}/COPYING
 }
