minor upstream update
git-svn-id: file:///srv/repos/svn-packages/svn@105877 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/audacious-plugins/trunk/PKGBUILD
+++ b/audacious-plugins/trunk/PKGBUILD
@@ -3,17 +3,16 @@
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=audacious-plugins
-pkgver=2.4.2
+pkgver=2.4.3
 pkgrel=1
 pkgdesc='Plugins for Audacious'
 arch=('i686' 'x86_64')
 url='http://audacious-media-player.org/'
 license=('GPL')
 
-depends=()
+depends=("audacious>=${pkgver}")
 
-makedepends=("audacious>=${pkgver}"
-             'alsa-lib' 'pulseaudio' 'jack' 'lame' 'libvorbis' 'flac'
+makedepends=('alsa-lib' 'pulseaudio' 'jack' 'lame' 'libvorbis' 'flac'
              'faad2' 'ffmpeg' 'fluidsynth' 'libcdio' 'libsidplay' 'wavpack'
              'libnotify' 'lirc-utils' 'curl' 'libmtp'
              'neon' 'libmms' 'libcue')
@@ -42,7 +41,7 @@ optdepends=('alsa-lib: Advanced Linux Sound Arch. output'
             'libcue: CUE playlist format')
 
 source=("http://distfiles.atheme.org/$pkgname-$pkgver.tgz")
-sha1sums=('07a0c0ac65bc01aa936454da9550ad982e66b8f0')
+sha1sums=('b89f87e9abb0249cb6b8318ed8fa58bb7bb27c67')
 
 build() {
 	cd "$srcdir/$pkgname-$pkgver"
