--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -9,8 +9,8 @@ arch=('i686' 'x86_64')
 url="http://icedtea.classpath.org/wiki/IcedTea-Web"
 license=('GPL2')
 groups=()
-depends=('openjdk6')
-makedepends=()
+depends=('openjdk6') # 'libx11' 'zlib'
+makedepends=('zip' 'xulrunner')
 optdepends=()
 provides=()
 conflicts=()
@@ -20,20 +20,37 @@ options=()
 install=
 changelog=
 source=(#$pkgname-$pkgver.tar.gz
+	# latest snapshot from 1.0 release branch
 	# see http://icedtea.classpath.org/hg/release/icedtea-web-1.0/rev/b3647620fa41 for state
 	http://icedtea.classpath.org/hg/release/icedtea-web-1.0/archive/b3647620fa41.tar.bz2)
 noextract=()
-md5sums=() #generate with 'makepkg -g'
+md5sums=('0468c20ad57d1d1f5e5b490956301d8e')
 
 build() {
-  cd "$srcdir/$pkgname-$pkgver"
+#  cd "$srcdir/$pkgname-$pkgver"
 
-  ./configure --prefix=/usr
+  _javaver=6
+  _jvmdir=/usr/lib/jvm/java-${_javaver}-openjdk
+
+  if [ "${CARCH}" = "x86_64" ]; then
+    _arch=amd64
+  else
+    _arch=i586
+  fi
+
+
+  cd $srcdir/$pkgname-*
+
+  ./autogen.sh
+  ./configure --prefix=/usr \
+	--mandir=/usr/share/man \
+#	--disable-doc \
+#	--disable-plugin #--help
   make
 }
 
 package() {
-  cd "$srcdir/$pkgname-$pkgver"
-
-  make DESTDIR="$pkgdir/" install
+#  cd "$srcdir/$pkgname-$pkgver"
+  cd $srcdir/$pkgname-*
+  make DESTDIR="$pkgdir/" install-data-local
 }
