--- a/stardict/trunk/PKGBUILD
+++ b/stardict/trunk/PKGBUILD
@@ -3,33 +3,36 @@
 # Contributor: Neil Lin <neil@vip.url.com.tw>
 
 pkgname=stardict
-pkgver=3.0.1
-pkgrel=3
-pkgdesc="A powerful international dictionary written in Gtk2."
-arch=(i686 x86_64)
-url="http://stardict.sourceforge.net/"
+pkgver=3.0.2
+pkgrel=1
+pkgdesc='A powerful international dictionary written in Gtk2.'
+arch=('i686' 'x86_64')
+url='http://stardict.sourceforge.net/'
 license=('GPL')
-depends=('enchant' 'gtk2>=2.16.1' 'libsigc++2.0' 'libsm')
-makedepends=('intltool' 'popt')
+depends=('enchant' 'gtk2' 'libsigc++' 'libsm')
+makedepends=('intltool' 'popt' 'gnome-doc-utils')
 options=('!libtool' '!emptydirs')
-source=(http://downloads.sourceforge.net/sourceforge/stardict/$pkgname-$pkgver.tar.bz2
-	stardict_gcc43.patch
-	sigc++.patch)
-md5sums=('93bb2d7825bc9d52a4f9ba4c1c506d1d'
-         '25755f13686e22ad28239fa11049f14d'
-         '5bf0232225dab4e62a8bd08eb2ec581c')
+source=("http://downloads.sourceforge.net/sourceforge/stardict/$pkgname-$pkgver.tar.bz2"
+        'help-in-destdir.patch')
+sha1sums=('301875657cd39b5f25e5933ece22936a28db1230'
+          '2016db86bb10782701c94777ebf67455282ca163')
 
 build()
 {
-   cd $srcdir/$pkgname-$pkgver
+	cd "$srcdir/$pkgname-$pkgver"
 
-   patch -Np1 -i $srcdir/sigc++.patch || return 1
-   patch -Np1 -i $srcdir/stardict_gcc43.patch || return 1
+	export LDFLAGS="${LDFLAGS// -Wl,--as-needed/}"
+	patch -p1 -i ../help-in-destdir.patch
 
-   ./configure 	PKG_CONFIG=/usr/bin/pkg-config --prefix=/usr --sysconfdir=/etc \
-        --mandir=/usr/share/man --disable-gnome-support --disable-schemas-install \
-        --disable-espeak --disable-gucharmap --disable-festival --disable-advertisement \
-	--disable-updateinfo || return 1
-   make || return 1
-   make DESTDIR=$pkgdir install || return 1
+	./configure PKG_CONFIG=/usr/bin/pkg-config --prefix=/usr \
+		--sysconfdir=/etc --mandir=/usr/share/man \
+		--disable-gnome-support --disable-schemas-install \
+		--disable-espeak --disable-gucharmap \
+		--disable-festival --disable-updateinfo
+	make
+}
+
+package() {
+	cd "$srcdir/$pkgname-$pkgver"
+	make DESTDIR="$pkgdir" install
 }
