split build into plugin and doc, fix man location
git-svn-id: file:///srv/repos/svn-packages/svn@105899 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/icedtea-web/trunk/PKGBUILD
+++ b/icedtea-web/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # $Id$
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
-
-pkgname=icedtea-web
+pkgbase=icedtea-web
+pkgname=('icedtea-web' 'icedtea-web-doc')
 pkgver=0.9.hg20110107
 pkgrel=1
 pkgdesc="provides a Free Software web browser plugin running applets written in the Java programming language and an implementation of Java Web Start, originally based on the NetX project"
@@ -22,9 +22,11 @@ changelog=
 source=(#$pkgname-$pkgver.tar.gz
 	# latest snapshot from 1.0 release branch
 	# see http://icedtea.classpath.org/hg/release/icedtea-web-1.0/rev/b3647620fa41 for state
-	http://icedtea.classpath.org/hg/release/icedtea-web-1.0/archive/b3647620fa41.tar.bz2)
+	http://icedtea.classpath.org/hg/release/icedtea-web-1.0/archive/b3647620fa41.tar.bz2
+        fix-man-location.patch)
 noextract=()
-md5sums=('0468c20ad57d1d1f5e5b490956301d8e')
+md5sums=('0468c20ad57d1d1f5e5b490956301d8e'
+         '1608d3141594a272d330db6adb64a572')
 
 build() {
 #  cd "$srcdir/$pkgname-$pkgver"
@@ -39,18 +41,28 @@ build() {
   fi
 
 
-  cd $srcdir/$pkgname-*
+  cd $srcdir/$pkgbase-*
+
+  patch -Np1 -i $srcdir/fix-man-location.patch
 
   ./autogen.sh
-  ./configure --prefix=/usr \
-	--mandir=/usr/share/man \
+  ./configure --prefix=/usr/lib/jvm/java-6-openjdk \
+      --datarootdir=/usr/share
 #	--disable-doc \
 #	--disable-plugin #--help
   make
 }
 
-package() {
+package_icedtea-web() {
 #  cd "$srcdir/$pkgname-$pkgver"
-  cd $srcdir/$pkgname-*
-  make DESTDIR="$pkgdir/" install-data-local
+  cd $srcdir/$pkgbase-*
+  make DESTDIR="$pkgdir" install-exec-local
 }
+
+package_icedtea-web-doc() {
+#  cd "$srcdir/$pkgname-$pkgver"
+  cd $srcdir/$pkgbase-*
+  install -m755 -d $pkgdir/usr/lib/jvm/java-6-openjdk/jre/lib
+  make DESTDIR="$pkgdir" install-data-local
+}
+
