--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=meld
-pkgver=1.5.0
-pkgrel=1
+pkgver=1.4.0
+pkgrel=3
 pkgdesc='Visual diff and merge tool'
 arch=('any')
 url='http://meld.sourceforge.net/'
@@ -14,8 +14,10 @@ makedepends=('intltool' 'gnome-doc-utils')
 optdepends=('pygtksourceview2: syntax highlighting'
             'gnome-python: gnome integration')
 install=meld.install
-source=("http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.5/${pkgname}-${pkgver}.tar.bz2")
-sha256sums=('35e75eb3f7b89a6a8a71fafa1e9f0049bc9facd18b0a2a2c54d5d911d098c0cd')
+source=("http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.4/${pkgname}-${pkgver}.tar.bz2")
+sha256sums=('0edb78d9da2bfe7e630742111eb6d8edc476c8cc91b1f6403d940d072dd75469')
+
+options=('force')
 
 build() {
     cd "${srcdir}/${pkgname}-${pkgver}"
