--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
 
 pkgname=kdevelop
-pkgver=4.1.1
+pkgver=4.1.2
 pkgrel=1
 pkgdesc="A C/C++ development environment for KDE"
 arch=('i686' 'x86_64')
@@ -13,7 +13,7 @@ depends=('kdebase-workspace' 'kdevplatform' 'kdeutils-okteta')
 makedepends=('cmake' 'automoc4' 'perl')
 install="${pkgname}.install"
 source=("http://download.kde.org/stable/${pkgname}/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('bf26c9d4ade12cf9f98a3bf234f37335')
+sha1sums=('e9e83f931bfd0ae508203a1d340fb1585eed95ac')
 
 build() {
   cd ${srcdir}
