--- a/rxvt-unicode/trunk/PKGBUILD
+++ b/rxvt-unicode/trunk/PKGBUILD
@@ -3,21 +3,25 @@
 # Contributor: dibblethewrecker dibblethewrecker.at.jiwe.dot.org
 
 pkgname=rxvt-unicode
-pkgver=9.09
-pkgrel=2
+pkgver=9.10
+pkgrel=1
 pkgdesc="An unicode enabled rxvt-clone terminal emulator (urxvt)"
 arch=(i686 x86_64)
 depends=('gcc-libs' 'libxft' 'gdk-pixbuf2')
-makedepends=('ncurses' 'perl>=5.10.0' 'pkgconfig')
+makedepends=('ncurses' 'perl>=5.12.2' 'pkgconfig')
 optdepends=('perl: lots of utilities' 'gtk2-perl: to use the urxvt-tabbed')
 url="http://software.schmorp.de/pkg/rxvt-unicode.html"
 license=("GPL")
 source=(http://dist.schmorp.de/rxvt-unicode/${pkgname}-${pkgver}.tar.bz2 \
         ${pkgname}.desktop ${pkgname}.png popup-menu-hang.diff)
-md5sums=('3505887adae710382edee90ed5538a01' '5bfefa1b41c2b81ca18f2ef847330543'\
-         '84328cada91751df07324d95f8be4d1b' 'aead33ba3b08eeb251fb0c1427a4a024')
-sha1sums=('02ec1b5c9c1dff241bfc3b6d2c2a7e5c00aa47ad' '79b7cacb7d6ce4a34f8a31a2e33475a8f7bf69cb'\
-         '9ff58d7b1d60838c51c9045bc0be342fac456790' 'ec4013f4af3a45da928b75f40fbf6389070e7fdd')
+md5sums=('a23aa40b31e843878b6f9c44768de430'
+         '5bfefa1b41c2b81ca18f2ef847330543'
+         '84328cada91751df07324d95f8be4d1b'
+         'aead33ba3b08eeb251fb0c1427a4a024')
+sha1sums=('54c896a4885b8984b0dfa652269c3c34c4d75f2d'
+	  '79b7cacb7d6ce4a34f8a31a2e33475a8f7bf69cb'
+	  '9ff58d7b1d60838c51c9045bc0be342fac456790'
+          'ec4013f4af3a45da928b75f40fbf6389070e7fdd')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -53,4 +57,3 @@ package() {
   install -Dm644 ../${pkgname}.png \
     "${pkgdir}/usr/share/pixmaps/${pkgname}.png"
 }
-
