upgpkg: nicotine 1.2.16-1 Bump release to 1.2.16
git-svn-id: file:///srv/repos/svn-packages/svn@106143 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/nicotine/trunk/PKGBUILD
+++ b/nicotine/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Andrew Wright <andreww@photism.org>
 
 pkgname=nicotine
-pkgver=1.2.15
-pkgrel=2
+pkgver=1.2.16
+pkgrel=1
 pkgdesc="Soulseek music-sharing client, written in python"
 license=('GPL')
 arch=('i686' 'x86_64')
@@ -13,16 +13,16 @@ conflicts=(nicotine-plus)
 replaces=(nicotine-plus)
 url="http://sourceforge.net/projects/nicotine-plus/"
 source=(http://downloads.sourceforge.net/project/nicotine-plus/nicotine-plus/${pkgver}/${pkgname}+-${pkgver}.tar.bz2)
-md5sums=('05dbaa15f51509f376833dfb0ad4e8ad')
 optdepends=('python-sexy: To enable spell checking'
 	    'python-geoip: to enable Geographical blocker')
+md5sums=('ac7433c21ef619a37e079a7ae68da94a')
 
 build() {
   cd ${srcdir}/${pkgname}+-${pkgver}
   python2 setup.py install --root=${pkgdir}
   cd trayicon
   python2 autogen.py
-  make || return 1
-  make DESTDIR=${pkgdir} install || return 1
-  ln -s nicotine.py ${pkgdir}/usr/bin/nicotine || return 1
+  make 
+  make DESTDIR=${pkgdir} install 
+  ln -s nicotine.py ${pkgdir}/usr/bin/nicotine 
 }
