upgpkg: figlet 2.2.3-1 Upstream update, Updated license to BSD, Added sh depends, PKGBUILD clean up
git-svn-id: file:///srv/repos/svn-packages/svn@106150 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/figlet/trunk/PKGBUILD
+++ b/figlet/trunk/PKGBUILD
@@ -1,26 +1,26 @@
 # $Id$
-# Maintainer: eric <eric@archlinux.org>
-# Contributor: orelien <orelien@chez.com>
+# Maintainer: Eric Belanger <eric@archlinux.org>
 
 pkgname=figlet
-pkgver=2.2.2
-pkgrel=2
-pkgdesc="FIGlet is a program for making large letters out of ordinary text"
+pkgver=2.2.3
+pkgrel=1
+pkgdesc="A program for making large letters out of ordinary text"
 arch=('i686' 'x86_64')
 url="http://www.figlet.org/"
-license=('custom:Academic')
-depends=('glibc')
-source=(ftp://ftp.figlet.org/pub/figlet/program/unix/$pkgname${pkgver//./}.tar.gz)
-md5sums=('5f84ad52d092d5db4ad5916df767646b')
+license=('BSD')
+depends=('glibc' 'sh')
+source=(ftp://ftp.figlet.org/pub/figlet/program/unix/${pkgname}-${pkgver}.tar.gz)
+md5sums=('c9e49dc83efc59070a00313b936002bf')
+sha1sums=('e4c3c279d2747e0e2d80d11b9baf4e548f72e515')
 
 build() {
-  cd $srcdir/$pkgname${pkgver//./}
-  make DEFAULTFONTDIR=/usr/share/figlet/fonts all || return 1
-  install -d $pkgdir/usr/{bin,share/man/man6,share/figlet/fonts} || return 1
-  make install \
-    DESTDIR=$pkgdir/usr/bin \
-    MANDIR=$pkgdir/usr/share/man/man6 \
-    DEFAULTFONTDIR=$pkgdir/usr/share/figlet/fonts || return 1
-  install -D -m644 LICENSE $pkgdir/usr/share/licenses/$pkgname/LICENSE || return 1
-  chmod 755 $pkgdir/usr/bin/{figlist,showfigfonts}
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DEFAULTFONTDIR=/usr/share/figlet/fonts all
+}
+
+package() {
+  cd "${srcdir}/${pkgname}-${pkgver}"
+  make DESTDIR="${pkgdir}" BINDIR=/usr/bin MANDIR=/usr/share/man \
+    DEFAULTFONTDIR=/usr/share/figlet/fonts install 
+  install -D -m644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
