--- a/stardict/trunk/PKGBUILD
+++ b/stardict/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=stardict
 pkgver=3.0.2
-pkgrel=1
+pkgrel=2
 pkgdesc='A powerful international dictionary written in Gtk2.'
 arch=('i686' 'x86_64')
 url='http://stardict.sourceforge.net/'
@@ -13,16 +13,20 @@ depends=('enchant' 'gtk2' 'libsigc++' 'libsm')
 makedepends=('intltool' 'popt' 'gnome-doc-utils')
 options=('!libtool' '!emptydirs')
 source=("http://downloads.sourceforge.net/sourceforge/stardict/$pkgname-$pkgver.tar.bz2"
-        'help-in-destdir.patch')
+        'help-in-destdir.patch'
+        'as-needed.patch')
 sha1sums=('301875657cd39b5f25e5933ece22936a28db1230'
-          '2016db86bb10782701c94777ebf67455282ca163')
+          '0249d769e5cc85e183eb395b824342f8ca320f56'
+          '22fca061d1be23ac79da6c0ec5fc488ae0aca9c1')
 
 build()
 {
 	cd "$srcdir/$pkgname-$pkgver"
 
-	export LDFLAGS="${LDFLAGS// -Wl,--as-needed/}"
+	# patches accepted upstream; will be in stardict>3.0.2
 	patch -p1 -i ../help-in-destdir.patch
+	patch -p1 -i ../as-needed.patch
+	automake
 
 	./configure PKG_CONFIG=/usr/bin/pkg-config --prefix=/usr \
 		--sysconfdir=/etc --mandir=/usr/share/man \
