--- a/w3m/trunk/PKGBUILD
+++ b/w3m/trunk/PKGBUILD
@@ -2,25 +2,36 @@
 # Contributor: dorphell <dorphell@archlinux.org>
 
 pkgname=w3m
-pkgver=0.5.2
-pkgrel=5
-pkgdesc="A pager/text-based WWW browser"
+pkgver=0.5.3
+pkgrel=1
+pkgdesc='Text-based Web browser, as well as pager'
 arch=('i686' 'x86_64')
-url="http://w3m.sourceforge.net/"
+url='http://w3m.sourceforge.net/'
 license=('custom')
-depends=('openssl' 'gc>=7.0' 'ncurses' 'zlib')
+depends=('openssl' 'gc' 'ncurses' 'zlib')
 makedepends=('imlib2')
 optdepends=('imlib2: for graphics support') 
-source=(http://downloads.sourceforge.net/sourceforge/w3m/$pkgname-$pkgver.tar.gz)
-md5sums=('ba06992d3207666ed1bf2dcf7c72bf58')
-sha1sums=('484522547ae6dbb342d3858a2a53a65451e273f9')
+source=("http://downloads.sourceforge.net/sourceforge/w3m/$pkgname-$pkgver.tar.gz")
+sha1sums=('444b6c8cf7094ee95f8e9de96b37f814b9d83237')
 
 build() {
-  cd "$srcdir/$pkgname-$pkgver"
-  ./configure --prefix=/usr --libexecdir=/usr/lib --enable-ansi-color \
-    --disable-mouse --disable-w3mmailer --enable-image=x11,fb \
-    --with-imagelib=imlib2 --with-termlib=ncurses || return 1
-  make || return 1
-  make DESTDIR="${pkgdir}" install || return 1
-  install -Dm644 doc/README "${pkgdir}/usr/share/licenses/$pkgname/README"
+	cd "$srcdir/$pkgname-$pkgver"
+	./configure \
+		--prefix=/usr \
+		--libexecdir=/usr/lib \
+		--enable-image=x11,fb \
+		--with-imagelib=imlib2 \
+		--with-termlib=ncurses \
+		--disable-w3mmailer \
+		--disable-mouse
+	make
+}
+
+package() {
+	cd "$srcdir/$pkgname-$pkgver"
+	make DESTDIR="$pkgdir" install
+
+	install -d "$pkgdir"/usr/share/{doc,licenses}/"$pkgname"
+	find doc/* | grep -v CVS | xargs -i install "{}" "$pkgdir/usr/share/doc/$pkgname/"
+	ln -s "../../doc/$pkgname/README" "$pkgdir/usr/share/licenses/$pkgname/"
 }
