--- a/whois/trunk/PKGBUILD
+++ b/whois/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=whois
 pkgver=5.0.10
-pkgrel=1
+pkgrel=2
 pkgdesc="The whois client by Marco d'Itri"
 arch=('i686' 'x86_64')
 url="http://www.linux.it/~md/software/"
@@ -16,10 +16,12 @@ md5sums=('d7626a3f789da85e70e4b931b6b34a26')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  make prefix=/usr HAVE_LIBIDN=1
+
+  make prefix=/usr CFLAGS="$CFLAGS" HAVE_LIBIDN=1
 }
 
 package() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+
   make prefix=/usr BASEDIR="${pkgdir}" install-whois
 }
