--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,20 +4,25 @@
 
 pkgname=slang
 pkgver=2.2.3
-pkgrel=1
+pkgrel=2
 pkgdesc="S-Lang is a powerful interpreted language"
 arch=('i686' 'x86_64')
-url="http://www.s-lang.org/"
+url="http://www.jedsoft.org/slang/"
 license=('GPL')
 depends=('glibc' 'pcre' 'zlib')
 backup=('etc/slsh.rc')
 options=('!makeflags')
-source=(ftp://ftp.fu-berlin.de/pub/unix/misc/slang/v${pkgver%.*}/${pkgname}-${pkgver}.tar.gz)
-md5sums=('ffd7718a9808894413a0e0ee82a79335')
+source=(ftp://ftp.fu-berlin.de/pub/unix/misc/slang/v${pkgver%.*}/${pkgname}-${pkgver}.tar.bz2
+        ${pkgname}-2.2.3-faster-baud-rates.patch)
+md5sums=('17e1864de999ae9535a9f7350a010427'
+         '4e22e58836100adfae34e824f5fbcb1c')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
-  ./configure --prefix=/usr --sysconfdir=/etc || return 1
+  patch -Np1 -i "${srcdir}"/${pkgname}-2.2.3-faster-baud-rates.patch || return 1
+
+  ./configure --prefix=/usr \
+              --sysconfdir=/etc || return 1
   make || return 1
   make DESTDIR="${pkgdir}" install-all || return 1
 }
