--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,10 +1,10 @@
 # $Id$
-# Maintainer: Eric Belanger <eric@archlinux.org>
+# Maintainer: Eric Bélanger <eric@archlinux.org>
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 
 pkgbase=lvm2
 pkgname=('lvm2' 'device-mapper')
-pkgver=2.02.79
+pkgver=2.02.80
 _pkgverlvm=${pkgver}
 pkgrel=1
 arch=('i686' 'x86_64')
@@ -15,10 +15,10 @@ conflicts=('mkinitcpio<0.5.99')
 source=(ftp://sources.redhat.com/pub/lvm2/LVM2.${_pkgverlvm}.tgz
         lvm2_install
         lvm2_hook)
-md5sums=('e6929251a90b0b626c024942a242f337' 'f781c9f5dd4f9934952c687b73d26a18'\
+md5sums=('816f4cee75674e3a21fd40f1961279f2' 'f781c9f5dd4f9934952c687b73d26a18'\
          '95bed25bdbc2c2d8500e7a07aeff7f65')
-sha1sums=('7d5e1c5cb7e0c856d7802d141e26bcaa362464ce' '583424bb0a6f89ffe4e4ea446b912f0fedac7050'\
-          '0dc0c0d620f634c4d078afdb78e3bae15ccf957b')
+sha1sums=('ad6e7742576d91c8e6f2301cd9ddfa8b64d8ce88' '583424bb0a6f89ffe4e4ea446b912f0fedac7050'\
+         '0dc0c0d620f634c4d078afdb78e3bae15ccf957b')
 
 build() {
   cd "${srcdir}/LVM2.${_pkgverlvm}"
