upgpkg: mpc 0.20-1 Bump version to 0.20 pkgbuild clean
git-svn-id: file:///srv/repos/svn-packages/svn@106266 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/mpc/trunk/PKGBUILD
+++ b/mpc/trunk/PKGBUILD
@@ -1,10 +1,11 @@
 # $Id$
-# Maintainer: Andrea Scarpino <andrea@archlinux.org>
+# Maintainer: Angel Velasquez <angvp@archlinux.org>
+# Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Alexander Fehr <pizzapunk gmail com>
 # Contributor: Link Dupont <link@subpop.net>
 
 pkgname=mpc
-pkgver=0.19
+pkgver=0.20
 pkgrel=1
 pkgdesc="Minimalist command line interface to MPD"
 arch=('i686' 'x86_64')
@@ -13,15 +14,17 @@ license=('GPL2')
 depends=('libmpdclient')
 options=('!emptydirs')
 source=(http://downloads.sourceforge.net/musicpd/${pkgname}-$pkgver.tar.bz2)
-md5sums=('9ab2967d9ec719b06a86f3b4121be654')
+md5sums=('24c81ad6afe6099e8d7a6826ef4b7105')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
+  ./configure --prefix=/usr 
+  make 
+}
 
-  ./configure --prefix=/usr || return 1
-  make || return 1
-  make DESTDIR="$pkgdir" install || return 1
-
+package() {
+  cd "$srcdir/$pkgname-$pkgver"
+  make DESTDIR="$pkgdir" install 
   # Install bash completion file
-  install -D -m644 doc/mpc-completion.bash "$pkgdir/etc/bash_completion.d/mpc" || return 1
+  install -D -m644 doc/mpc-completion.bash "$pkgdir/etc/bash_completion.d/mpc" 
 }
