Update to 0.9.21 and rebuild against libnl 2
git-svn-id: file:///srv/repos/svn-packages/svn@106286 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/iw/trunk/PKGBUILD
+++ b/iw/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Thomas Bächler <thomas@archlinux.org>
 
 pkgname=iw
-pkgver=0.9.20
+pkgver=0.9.21
 pkgrel=1
 pkgdesc="nl80211 based CLI configuration utility for wireless devices"
 arch=("i686" "x86_64")
@@ -11,10 +11,14 @@ license=("GPL")
 depends=("libnl")
 makedepends=("kernel-headers")
 source=(http://wireless.kernel.org/download/$pkgname/$pkgname-$pkgver.tar.bz2)
-sha256sums=('2d665fbfbe4fd6a40159fb821518fc5337da37448416405b936a393a14cbc7d3')
+sha256sums=('ea345b8ddc96c3c4bb58e0f4cb88c07f0daee214b1356ab194c65e17bde2d60f')
 
 build() {
-  cd $pkgname-$pkgver
-  make || return 1
-  make DESTDIR=$pkgdir install
+  cd "$srcdir"/$pkgname-$pkgver
+  make
+}
+
+package() {
+  cd "$srcdir"/$pkgname-$pkgver
+  make DESTDIR="$pkgdir" install
 }
