upgpkg: avidemux 2.5.4-2 x264 rebuild
git-svn-id: file:///srv/repos/svn-packages/svn@106303 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/avidemux/trunk/PKGBUILD
+++ b/avidemux/trunk/PKGBUILD
@@ -4,20 +4,23 @@
 pkgbase=avidemux
 pkgname=('avidemux-cli' 'avidemux-gtk' 'avidemux-qt')
 pkgver=2.5.4
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 license=('GPL')
 url="http://fixounet.free.fr/avidemux/"
 makedepends=('cmake' 'libxslt' 'gtk2' 'qt' 'jack' 'esound' 'libvorbis' 'sdl' 'libxv' \
              'alsa-lib' 'lame' 'xvidcore' 'faad2' 'faac' 'x264' 'libsamplerate' \
              'opencore-amr' 'yasm' 'mesa' 'libvpx')
-source=(http://downloads.sourceforge.net/avidemux/avidemux_${pkgver}.tar.gz 2.5.4_audioDevice.patch)
-md5sums=('b849460f6480df92bfd72d1a3dc288d4' 'ef375051a12c911c6bd8a7bf85b76330')
-sha1sums=('83d6f6d87442ce4fc4e4806735ec27ef5e90364c' '95aa151acffd5b5c7b34a16e7727a4ba635c59c5')
+source=(http://downloads.sourceforge.net/avidemux/avidemux_${pkgver}.tar.gz 2.5.4_audioDevice.patch
+        x264.patch)
+md5sums=('b849460f6480df92bfd72d1a3dc288d4'
+         'ef375051a12c911c6bd8a7bf85b76330'
+         '0d01294b8171a856f718ab8131bea074')
 
 build() {
   cd "${srcdir}/${pkgbase}_${pkgver}"
   patch -p0 < ../2.5.4_audioDevice.patch
+  patch -Np1 -i "${srcdir}/x264.patch"
   mkdir build
   cd build
   cmake -D CMAKE_INSTALL_PREFIX=/usr -D CMAKE_BUILD_TYPE=Release -D CMAKE_SKIP_RPATH=ON -D GTK=1 -D QT4=1 ..
