upgpkg: xfce4-panel 4.8.0-1 upstream release 4.8.0
git-svn-id: file:///srv/repos/svn-packages/svn@106367 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,19 +3,19 @@
 # Contributor: tobias <tobias funnychar archlinux.org>
 
 pkgname=xfce4-panel
-pkgver=4.7.7
+pkgver=4.8.0
 pkgrel=1
 pkgdesc="Panel for the Xfce desktop environment"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://www.xfce.org/"
 groups=('xfce4')
-depends=('exo>=0.5.4' 'garcon>=0.1.4' 'libxfce4ui' 'libwnck' 'hicolor-icon-theme')
+depends=('exo>=0.6.0' 'garcon>=0.1.5' 'libxfce4ui>=4.8.0' 'libwnck' 'hicolor-icon-theme')
 makedepends=('intltool' 'gtk-doc')
 options=('!libtool')
 install=${pkgname}.install
-source=(http://archive.xfce.org/src/xfce/${pkgname}/4.7/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('dabbc8ef3bb556cbdf22b375be008db7')
+source=(http://archive.xfce.org/src/xfce/${pkgname}/4.8/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('ed80fc48817bfcc0058e7baf8603ee3c')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
