upgpkg: xfdesktop 4.8.0-1 upstream release 4.8.0
git-svn-id: file:///srv/repos/svn-packages/svn@106407 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,22 +3,22 @@
 # Contributor: tobias <tobias funnychar archlinux.org>
 
 pkgname=xfdesktop
-pkgver=4.7.5
+pkgver=4.8.0
 pkgrel=1
 pkgdesc="A desktop manager for Xfce"
 arch=('i686' 'x86_64')
 license=('GPL2')
 url="http://www.xfce.org/"
 groups=('xfce4')
-depends=('libxfce4ui' 'thunar>=1.1.4' 'hicolor-icon-theme' 'libwnck>=2.30.0')
-makedepends=("xfce4-panel>=4.7.4" 'pkgconfig' 'intltool')
-optdepends=('xfce4-panel: panel plugin')
+depends=('libxfce4ui' 'thunar>=1.2.0' 'hicolor-icon-theme' 'libwnck>=2.30.0')
+makedepends=("xfce4-panel>=4.8.0" 'pkgconfig' 'intltool')
+optdepends=('xfce4-panel: panel menu plugin')
 conflicts=('xfce4-menueditor')
 replaces=('xfce4-menueditor')
 options=('!libtool')
 install=xfdesktop.install
-source=(http://archive.xfce.org/src/xfce/${pkgname}/4.7/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('ae6c2b1d0f43a294bf409ec0332352a4')
+source=(http://archive.xfce.org/src/xfce/${pkgname}/4.8/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('828223bc0a2b311b2f6aa529b1b7a87d')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
