upgpkg: koffice-meta 2.3.0-1 adapt meta packages for 2.3 series
git-svn-id: file:///srv/repos/svn-packages/svn@106450 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/koffice-meta/trunk/PKGBUILD
+++ b/koffice-meta/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 pkgbase=koffice-meta
 pkgname=('koffice-meta-koffice'
 	'koffice-meta-koffice-doc')
-pkgver=2.2.0
+pkgver=2.3.0
 pkgrel=1
 arch=('any')
 url='http://www.archlinux.org'
@@ -16,41 +16,46 @@ build() {
 
 package_koffice-meta-koffice(){
 pkgdesc="Meta package for koffice"
-depends=('koffice-interfaces'
-        'koffice-kounavail'
-        'koffice-kspread'
-        'koffice-plugins'
-        'koffice-karbon'
+depends=(
+	'koffice-filters'
+	'koffice-interfaces'
+	'koffice-libs'
+	'koffice-plugins'
+	'koffice-pics'
+	'koffice-servicetypes'
+	'koffice-templates'
+	'koffice-tools'
+	'koffice-karbon'
+#	'koffice-kchart'
 	'koffice-kexi'
-        'koffice-kplato'
-        'koffice-kword'
-        'koffice-servicetypes'
-        'koffice-kchart'
-        'koffice-kpresenter'
-        'koffice-libs'
-        'koffice-templates'
-        'koffice-filters'
-#        'koffice-kdgantt'
-        'koffice-krita'
-        'koffice-pics'
-        'koffice-tools')
+	'koffice-kformula'
+	'koffice-kounavail'
+	'koffice-kplato'
+	'koffice-kpresenter'
+	'koffice-krita'
+	'koffice-kspread'
+	'koffice-kword'
+#	'koffice-kdgantt' # still an empty package
+        )
 replaces=('koffice')
 conflicts=('koffice-doc')
 }
 
 package_koffice-meta-koffice-doc(){
 pkgdesc="Meta package for koffice-doc"
-depends=('koffice-interfaces'
-        'koffice-kspread-doc'
-        'koffice-karbon-doc'
+depends=(
+	'koffice-karbon-doc'
+#	'koffice-kword-doc' # see http://userbase.kde.org/KWord/Manual for documentation (not supplied by upstream anymore in the sources)
+	'koffice-kspread-doc'
+	'koffice-thesaurus-doc'
+	'koffice-handbook'
 	'koffice-kexi-doc'
-#        'koffice-kplato-doc'
-#        'koffice-kword-doc'
-        'koffice-kchart-doc'
-        'koffice-kpresenter'
-        'koffice-kpresenter-doc'
-#        'koffice-krita-doc'
-        'koffice-thesaurus-doc')
+	'koffice-kpresenter-doc'
+#	'koffice-kplato-doc'
+#	'koffice-krita-doc' # no krita-doc anymore upstream
+	'koffice-kformula-doc'
+#	'koffice-kchart-doc'
+     )
 replaces=('koffice-doc')
 conflicts=('koffice-doc')
 }
