add docbook-xml to makedepends FS#22465
git-svn-id: file:///srv/repos/svn-packages/svn@106452 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kile/trunk/PKGBUILD
+++ b/kile/trunk/PKGBUILD
@@ -10,7 +10,7 @@ arch=("i686" "x86_64")
 license=('GPL2')
 url="http://kile.sourceforge.net/"
 depends=('kdelibs' 'texlive-core')
-makedepends=('cmake' 'automoc4')
+makedepends=('cmake' 'automoc4' 'docbook-xml')
 install=kile.install
 source=("http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.bz2")
 md5sums=('8585c196b7bff68c5cffb924a98b8783')
@@ -23,10 +23,10 @@ build() {
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_SKIP_RPATH=ON \
     -DCMAKE_INSTALL_PREFIX=/usr
-  make || return 1
+  make
 }
 
 package() {
   cd ${srcdir}/build
-  make DESTDIR=$pkgdir install || return 1
+  make DESTDIR=$pkgdir install
 }
